0.6.0 (currently working on)
- [#1424] Feature: Add classes: category, categorybag, categorybagbuilder
- [#1428] Change: Add tests for the bag class
- [#1426] Change: Add unit tests for objectfromdb
- [#1429] Fix: Failing test: testGetAdditionalQueryForCountryWithMultipleValidCountries
- [#1337] Change: Move the table names to constants
- [#1400] Feature: Create a seminarbag builder and move creating the WHERE clause for the list view out of pi1
- [#1404] Change: Make use of the oelib testing framework for creating Seminar Manager dummy records
- [#1389] Feature: Add categories in the BE
- [#1380] Feature: Add a wizard to tx_seminars
- [#1371] Feature: Add city to list view
- [#1381] Change: Change the way the CSS file is included
- [#634] Feature: Add time slots to the seminar records (FE)
- [#1046] Feature: Two-click registration
- [#1327] Feature: Add a column "status" to the "my events" list
- [#1266] Fix: Labels for buttons cannot be set via TS setup
- [#1316] Feature: In mod2 also show timed events
- [#1315] Feature: In tx_seminars_bag allow to ignore the timing of records
- [#1204] Feature: Added French translation by François Suter
- [#1095] Feature: Show the target groups in the list view and allow to sort by and search for them
- [#1180] Feature: Modify tx_seminars_objectfromdb::getRecordIcon() so it returns hidden and timed icons
- [#1314] Fix: tx_seminars_organizers.email shouldn't be an exclude field
- [#1311] Change: Sort the time slots relations in the event record form by the begin date of the time slots
- [#946] Change: Require TYPO3 4.1.2
- [#1208, #1209, #1210, #1326, #1344, #1376] Feature: Added new Selector Widget to the list view
- [#1205] Feature: Added Italian translation by Mauro Lorenzutti
- [#1028] Feature: When a user unregisters, inform the user, organizers and new attendee via e-mail
- [#1225] Fix: Missing empty line in confirmation mail
- [#1207] Change: Add country to location records
- [#1206] Change: Added language to event records