@@ -1,4 +1,5 @@
 0.6.0 (currently working on)
+- [#1418] Change: testingframework::resetAutoIncrement and ::countRecords should allow every existing table
 - [#1424] Feature: Add classes: category, categorybag, categorybagbuilder
 - [#1428] Change: Add tests for the bag class
 - [#1426] Change: Add unit tests for objectfromdb
